--- a/index.html
+++ b/index.html
@@ -326,7 +326,8 @@
 
       <div class="col-12">
         <ul class="d-flex mb-5 flex-wrap">
-             <li class="list" data-filter="Competitions"> Competitions  </li>
+          <li class="list active" data-filter="All">All</li>
+          <li class="list" data-filter="Competitions"> Competitions  </li>
           <li class="list" data-filter="Coding">Coding</li>
           <li class="list" data-filter="Camps">Camps</li>
           
