--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
           <div class="image">
             <img class="img-fluid" src="images/3. W - Copy.PNG" alt="" srcset="">
             <div class="workdetails">
-              <h5>Imagiminds Website- <a href=http://www.imagiminds.live target="_blank"> Click Here</a></h5>
+              <h5>Imagiminds Website- <a href=https://imagiminds.herokuapp.com/ target="_blank"> Click Here</a></h5>
 
             </div>
 
