--- a/index.html
+++ b/index.html
@@ -339,6 +339,18 @@
 
 
       <div class="row">
+         <div class="col-md-6 col-lg-4 mb-4 main Camps">
+          <div class="image">
+            <img class="img-fluid" src="images/Letter(2).jpg" alt="" srcset="">
+
+            <div class="workdetails">
+              <h5>Yale Young Global Scholars</h5>
+
+            </div>
+
+          </div>
+
+        </div>
         <div class="col-md-6 col-lg-4 mb-4 main Camps">
           <div class="image">
             <img class="img-fluid" src="images/Screenshot 2024-03-09 062123.png" alt="" srcset="">
@@ -376,18 +388,7 @@
           </div>
 
         </div>
-        <div class="col-md-6 col-lg-4 mb-4 main Camps">
-          <div class="image">
-            <img class="img-fluid" src="images/leaad Letter(2).jpg" alt="" srcset="">
-
-            <div class="workdetails">
-              <h5>S</h5>
-
-            </div>
-
-          </div>
-
-        </div>
+       
         
         <div class="col-md-6 col-lg-4 mb-4 main Camps">
           <div class="image">
