--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
       <div class="row">
          <div class="col-md-6 col-lg-4 mb-4 main Camps">
           <div class="image">
-            <img class="img-fluid" src="images/Letter(2).jpg" alt="" srcset="">
+            <img class="img-fluid" src="images/Lette.jpg" alt="" srcset="">
 
             <div class="workdetails">
               <h5>Yale Young Global Scholars</h5>
