--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
           <div class="image">
             <img class="img-fluid" src="images/3. W - Copy.PNG" alt="" srcset="">
             <div class="workdetails">
-              <h5>Imagiminds Website- <a href=https://imagiminds.herokuapp.com/ target="_blank"> Click Here</a></h5>
+              <h5>Imagiminds Website- <a href=https://imagiminds.yolasite.com/ target="_blank"> Click Here</a></h5>
 
             </div>
 
@@ -612,7 +612,7 @@
           <div class="image">
             <img class="img-fluid" src="images/hackathon.PNG" alt="" srcset="">
             <div class="workdetails">
-              <h5>Hackathon Website-<a href=https://imagimindshackher.tech/ target="_blank"> Click Here</a> </h5>
+              <h5>Hackathon </h5>
 
             </div>
 
